[package]
name = "raspivid_decode"
version = "0.1.0"
authors = ["Konstantin Zhukov <moncruist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-sys-next = "^4.3.0"
clap = "3.0.0-beta"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
sdl2 = "0.34"